# migs-tab

./: .gitignore  README.md  SPEC.md  pyproject.toml
.claude/skills/migs-tab/: SKILL.md
.github/workflows/: ci.yml
scripts/yourmt3/: SETUP.md  migs_driver.py  requirements-mac.txt
src/migs_tab/: __init__.py  annotations.py  articulations.py  chord_shapes.py  cli.py  doctor.py  download.py  frames.py  fret.py  mt3.py  musicxml.py  paths.py  render.py  salience.py  separate.py  structure.py  transcribe.py  tuning.py  verify.py
tests/: test_annotations.py  test_articulations.py  test_chord_shapes.py  test_frames.py  test_fret.py  test_mt3.py  test_musicxml.py  test_paths.py  test_render.py  test_render_overrides.py  test_salience.py  test_structure.py  test_tuning.py  test_verify.py
